--- a/album.css
+++ b/album.css
@@ -20,10 +20,6 @@ body {
     text-align: center;
 }
 
-.login-buttons-dropdown-align-right {
-    float: right;
-    z-index: 2000;
-}
 
 h1 {
     text-align: center;
@@ -82,4 +78,10 @@ h2 {
     font-style: italic;
     bottom: 0;
     z-index: 1000;
+}
+
+.login-buttons-dropdown-align-right {
+    position: fixed;
+    float: right;
+    z-index: 2000;
 }
